<resources>
    <string name="app_name">LoacApp</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="home">Início</string>
    <string name="myacc">Minha Conta</string>
    <string name="myorders">Meus Pedidos</string>
    <string name="shopcart">Carrinho de Compras</string>
    <string name="wishlist">Lista de Desejos</string>
    <string name="favstores">Lojas Favoritas</string>
    <string name="msg">Mensagens</string>
    <string name="more">Mais</string>
    <string name="settings">Configurações</string>
    <string name="suggestions">Sugestões</string>
    <string name="sac">SAC</string>
    <string name="about">Sobre Nós</string>

    <string name="version">Versão</string>
    <string name="evaluate">Avalie-nos no Google Play</string>
    <string name="confignotifications">Configurações de Notificação</string>
    <string name="versionnumber">(0.2.1)</string>
    <string name="title_activity_aaaaaaaaaaaa">aaaaaaaaaaaa</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
